--- a/index.html
+++ b/index.html
@@ -10,10 +10,22 @@
 </head>
 
 <body>
-<h1 class="title">Hit The Black | Game</h1>
-<!-- <hr> -->
+    <h1 class="title">Hit The Black | Game</h1>
+
+    <div class="buttons">
+        <div class="start">
+            Start
+        </div>
+        <div class="stop">
+            Stop
+        </div>
+    </div>
+    
+    <!-- <hr> -->
     <div class="container">
+
         <div class="hard-code">
+
             <div class="first">
                 <h1 class="left">Your Score</h1>
                 <h1 id="score">0</h1>
@@ -21,17 +33,15 @@
             <div class="second">
                 <h1 class='left'>Time Left (sec)</h1>
                 <h1 id="secs">60</h1>
-            <div class="name">
-                <span id="res">Game Start!!!</span> 
+                <div class="name">
+                    <span id="res">Game Start!!!</span>
+                </div>
             </div>
-            </div>
+
         </div>
-        <!-- <hr> -->
 
         <div class="grid">
-            <div class="square" id="1">
-                <!-- <img src="images/w.jpg" alt="" height="200px" width="200px"> -->
-            </div>
+            <div class="square" id="1"></div>
             <div class="square" id="2"></div>
             <div class="square" id="3"></div>
             <div class="square" id="4"></div>
@@ -43,8 +53,6 @@
         </div>
 
     </div>
-
-
     <script src="./js/script.js"></script>
 </body>
 
