--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1 class="title">Hit The Black | Game</h1>
+    <!-- <h1 class="title">Hit The Black | Game</h1> -->
 
     <div class="buttons">
         <div class="start">
